--- a/first_try.ipynb
+++ b/first_try.ipynb
@@ -2,18 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "import numpy as np\n"
+    "import numpy as np\n",
+    "from src.module import matrix_szorzas\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "A = np.array([[1, 2],[3, 4]])\n",
@@ -28,20 +29,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "[[3. 3.]\n",
+      " [7. 7.]]\n",
+      "[[3. 3.]\n",
       " [7. 7.]]\n"
      ]
     }
    ],
    "source": [
-    "C = A.dot(B)\n",
-    "print(C)"
+    "\n",
+    "print(A.dot(B))\n",
+    "print(matrix_szorzas(A, B))"
    ],
    "metadata": {
     "collapsed": false,
