--- a/foglalkozas.ipynb
+++ b/foglalkozas.ipynb
@@ -25,7 +25,7 @@
     }
    ],
    "source": [
-    "run_classifier_imagenet()"
+    "run_classifier_imagenet(image='dog.jpg')"
    ],
    "metadata": {
     "collapsed": false,
