--- a/foglalkozas.ipynb
+++ b/foglalkozas.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 23,
    "metadata": {
     "collapsed": true
    },
@@ -13,19 +13,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 24,
    "outputs": [
     {
      "data": {
-      "text/plain": "[('Samoyed, Samoyede', 79.07487487792969),\n ('Pomeranian', 8.977579116821289),\n ('white wolf, Arctic wolf, Canis lupus tundrarum', 3.610283613204956),\n ('keeshond', 2.6814231872558594),\n ('Arctic fox, white fox, Alopex lagopus', 2.27880859375)]"
+      "text/plain": "[('artichoke, globe artichoke', 99.8745346069336),\n ('cardoon', 0.11288608610630035),\n ('head cabbage', 0.005734441801905632),\n ('custard apple', 0.0036392807960510254),\n ('cauliflower', 0.00037196921766735613)]"
      },
-     "execution_count": 2,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "run_classifier_imagenet(image='dog.jpg')"
+    "run_classifier_imagenet(image='artichoke.jpg')"
    ],
    "metadata": {
     "collapsed": false,
