Add link to MNIST recognizer

--- a/foglalkozas.ipynb
+++ b/foglalkozas.ipynb
@@ -62,7 +62,7 @@
    "outputs": [],
    "source": [
     "from src.utils import print_rgb_images\n",
-    "print_rgb_images(eye)"
+    "print_rgb_images(image)"
    ]
   },
   {
@@ -88,24 +88,6 @@
      "name": "#%%\n"
     }
    },
-   "outputs": [],
-   "source": [
-    "gray_image.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## Kézírás felismerése"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
    "outputs": [],
    "source": [
     "gray_image.shape"
@@ -203,6 +185,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "https://mnist-demo.herokuapp.com"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## ImageNet Challenge"
    ]
   },
@@ -229,13 +218,6 @@
     "for what,prob in result:\n",
     "    print(\"{:<25}{}\".format(what,prob))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
