Finalize foglalkozas.ipynb

--- a/foglalkozas.ipynb
+++ b/foglalkozas.ipynb
@@ -51,6 +51,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from src.utils import print_rgb_images\n",
+    "print_rgb_images(image)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "eye = image[140:200,220:300,:]\n",
     "plt.imshow(eye)"
    ]
@@ -61,8 +71,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from src.utils import print_rgb_images\n",
-    "print_rgb_images(image)"
+    "# Közelítsünk rá a macska jobb fülére. Változtassuk az a,b,c,d értékeit úgy\n",
+    "# hogy a macskának a jobb fülére fókuszálunk.\n",
+    "\n",
+    "# ear = image[a:b,c:d,:]\n",
+    "# plt.imshow(ear)"
    ]
   },
   {
@@ -146,6 +159,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Fully connected network](images/fully_conn.jpg)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -185,7 +205,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "https://mnist-demo.herokuapp.com"
+    "Linkek a karakterfelismerés működésének illusztrálásához:\n",
+    "- https://mnist-demo.herokuapp.com\n",
+    "- https://www.cs.ryerson.ca/~aharley/vis/conv/flat.html\n",
+    "- https://www.cs.ryerson.ca/~aharley/vis/conv/"
    ]
   },
   {
@@ -193,6 +216,24 @@
    "metadata": {},
    "source": [
     "## ImageNet Challenge"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 2010-től 2017-ig\n",
+    "- 14 millió kézzel címkézett kép\n",
+    "- 20 ezer kategória\n",
+    "- ImageNet Large Scale Visual Recognition Challenge\n",
+    "- A versenyen 1000 osztályra szűkítették a képeket."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"https://www.researchgate.net/profile/Krishna_Kandarpa/publication/332452649/figure/fig1/AS:770098897887234@1560617293964/Error-rates-on-the-ImageNet-Large-Scale-Visual-Recognition-Challenge-Accuracy.ppm\">"
    ]
   },
   {
@@ -214,7 +255,11 @@
    },
    "outputs": [],
    "source": [
-    "result = run_classifier_imagenet(image='csivi.jpg')\n",
+    "file_name = 'csivi.jpg'\n",
+    "plt.imshow(load_image(file_name))\n",
+    "plt.show()\n",
+    "\n",
+    "result = run_classifier_imagenet(image=file_name)\n",
     "for what,prob in result:\n",
     "    print(\"{:<25}{}\".format(what,prob))"
    ]
